[package]
name = "rosemary"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-bincode = "0.4.0"
actix-logger = "0.4.1"
actix-web = "4.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "tokio-comp"] }
eyre = "0.6.12"
serde = { version = "1.0.223", features = ["derive"] }
serde_bencode = "0.2.4"
serde_qs = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
twink = { version = "1.1.3", features = ["12-hour", "log"] }
urlencoding = "2.1.3"
